@@ -2,7 +2,7 @@
 (* This file has been generated by program: do not edit! *)
 (* Copyright (c) INRIA 2007-2010 *)
 
-(* AST quotations with works by running the language parser (and its possible
+(* AST quotations that works by running the language parser (and its possible
    extensions) and meta-ifying the nodes. Works completely only in "strict"
    mode. In "transitional" mode, not all antiquotations are available. *)
 
